--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<div class="typeform-widget" data-url="https://mohammedaboullaite.typeform.com/to/QFjfbJ" style="width: 100%; height: 100%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=QFjfbJ&utm_source=typeform.com-15223366-Free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Developer Circle Casablanca Call for Proposals 2020</title>
+    <meta
+      name="description"
+      content="Developer Circle Casablanca Call for Proposals 2020"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="DevC Casa" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:title"
+      content="Developer Circle Casablanca Call for Proposals 2020"
+    />
+    <meta property="og:site_name" content="DevC Casa" />
+    <meta property="og:url" content="https://devc-casa.github.io/cfp" />
+    <style>
+      body,
+      html {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div
+      class="typeform-widget"
+      data-url="https://mohammedaboullaite.typeform.com/to/QFjfbJ"
+      style="width: 100%; height: 100%;"
+    ></div>
+    <script>
+      (function() {
+        var qs,
+          js,
+          q,
+          s,
+          d = document,
+          gi = d.getElementById,
+          ce = d.createElement,
+          gt = d.getElementsByTagName,
+          id = "typef_orm",
+          b = "https://embed.typeform.com/";
+        if (!gi.call(d, id)) {
+          js = ce.call(d, "script");
+          js.id = id;
+          js.src = b + "embed.js";
+          q = gt.call(d, "script")[0];
+          q.parentNode.insertBefore(js, q);
+        }
+      })();
+    </script>
+    <div
+      style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"
+    >
+      powered by
+      <a
+        href="https://admin.typeform.com/signup?utm_campaign=QFjfbJ&utm_source=typeform.com-15223366-Free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN"
+        style="color: #999"
+        target="_blank"
+        >Typeform</a
+      >
+    </div>
+  </body>
+</html>
