Made the code efficient and remove unneccesary code

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <meta property="og:site_name" content="DevC Casa" />
     <meta property="og:url" content="https://devc-casa.github.io/cfp" />
     <style>
-      body,
-      html {
+      body {
         padding: 0;
         margin: 0;
       }
@@ -27,15 +26,11 @@
     <div
       class="typeform-widget"
       data-url="https://mohammedaboullaite.typeform.com/to/QFjfbJ"
-      style="width: 100%; height: 100%;"
+      <!-- style="width: 100%; height: 100%;" -->
     ></div>
     <script>
       (function() {
-        var qs,
-          js,
-          q,
-          s,
-          d = document,
+        var js,q,d = document,
           gi = d.getElementById,
           ce = d.createElement,
           gt = d.getElementsByTagName,
